[tool.poetry]
name = "pwhtmltopdf"
version = "0.1.3"
description = "playwright render html to pdf"
authors = ["vvanglro"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/vvanglro/pwhtmltopdf"
repository = "https://github.com/vvanglro/pwhtmltopdf.git"
documentation = "https://github.com/vvanglro/pwhtmltopdf"
keywords = ["playwright", "html", "pdf"]
exclude = ["tests/effect"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
playwright = "*"
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-asyncio = "^0.19.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
