[project]
authors = [
    {name = "vvanglro", email = "vvanglro@gmail.com"},
]
license = {text = "Apache-2.0"}
requires-python = ">=3.10,<4.0"
dependencies = [
    "playwright",
    "jinja2<4.0.0,>=3.1.2",
]
name = "pwhtmltopdf"
version = "0.2.0"
description = "playwright render html to pdf"
readme = "README.md"
keywords = [
    "playwright",
    "html",
    "pdf",
]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    'Programming Language :: Python :: 3 :: Only',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
homepage = "https://github.com/vvanglro/pwhtmltopdf"
repository = "https://github.com/vvanglro/pwhtmltopdf.git"
documentation = "https://github.com/vvanglro/pwhtmltopdf"

[dependency-groups]
dev = [
    "pre-commit<3.0.0,>=2.20.0",
    "pytest<8.0.0,>=7.1.3",
    "pytest-asyncio<1.0.0,>=0.19.0",
    "mypy<1.0,>=0.971",
]

[tool.ruff]
ignore = [
"E402"
]
select = [
    "I",   # isort
    "E",   # pycodestyle
    "F",   # pyflakes
]
line-length = 130

[tool.hatch.build.targets.sdist]
exclude = [
    "tests/effect",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
